--- a/events.html
+++ b/events.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <link rel="icon" type="image/ico" href="images/logo.png" />
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="fonts/knowho/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/lightgallery.min.css">
+    <link rel="stylesheet" href="css/lightgallery.min.css">    
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="fonts/who/font/flaticon.css">
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-
-    <div class="site-wrap">
-
+      <link rel="stylesheet" href="knowhow19/style.css">
+  </head>
+  <body>
+<div class="site-wrap">
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -35,25 +30,17 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-
-
-
-
-        <header class="site-navbar py-3 border-bottom" role="banner">
-
+        <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
-
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
                         <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
-
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="index.html">Home</a></li>
-								<li><a href="intro.html">Intro</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -65,7 +52,7 @@
                                         <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="admin/results.php">Results</a></li>
+                                <li><a href="results.html">Results</a></li>
                                 <li class="has-children">
                                     <a href="story.html">Story</a>
                                     <ul class="dropdown">
@@ -78,7 +65,6 @@
                             </ul>
                         </nav>
                     </div>
-
                     <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -92,138 +78,115 @@
                         </div>
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
                     </div>
-
                 </div>
             </div>
-
         </header>
 
 
 
-        <div class="site-section" data-aos="fade">
-            <div class="container-fluid">
-
-                <div class="row justify-content-center">
-                    <div class="col-md-7">
-                        <div class="row mb-5">
-                            <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">Events</h2>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
-                                        <span class="eventah display-3 text-primary mb-4 d-block"></span>
-                                        <h3 class="text-black h4">Ahl ar-Ra'y</h3>
-                                        <p><strong class="font-weight-bold text-primary" style="color: black">“People of Opinion”</strong></p>
-                                        <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
-                                        <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
-                                        <span class="eventv display-3 text-primary mb-4 d-block"></span>
-                                        <h3 class="text-black h4">Vyaktitvam</h3>
-                                        <p><strong class="font-weight-bold text-primary" style="color: black">“All that you need to know, is within you”</strong></p>
-                                        <p style="color: black">Participant’s personality and the ability to move an abstract idea into a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
-                                        <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
-                                        <span class="eventa display-3 text-primary mb-4 d-block"></span>
-                                        <h3 class="text-black h4">Accentus</h3>
-                                        <p><strong class="font-weight-bold text-primary" style="color: black">“Why so serious?”</strong></p>
-                                        <p style="color: black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p>
-                                        <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/segacite.html">
-                                        <span class="events display-3 text-primary mb-4 d-block"></span>
-                                        <h3 class="text-black h4">Segacite</h3>
-                                        <p><strong class="font-weight-bold text-primary" style="color: black">“Because the cover of the book matters!”</strong></p>
-                                        <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
-                                        <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/cribado.html">
-                                        <span class="eventc display-3 text-primary mb-4 d-block"></span>
-                                        <h3 class="text-black h4">Cribado</h3>
-                                        <p><strong class="font-weight-bold text-primary" style="color: black">“Welcome to the Corporate World”</strong></p>
-                                        <p style="color: black">This event will help participants to crack the campus placement procedure.</p>
-                                        <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/msmr.html">
-                                        <span class="eventm display-3 text-primary mb-4 d-block"></span>
-                                        <h3 class="text-black h4">Ms/Mr KnowHow</h3>
-                                        <p><strong class="font-weight-bold text-primary" style="color: black">“Win the occasion”</strong></p>
-                                        <p style="color: black">To identify the best of the best.</p>
-                                        <p><strong class="font-weight-bold text-primary"></strong></p>
-                                    </a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
+  <div class="site-section"  data-aos="fade">
+    <div class="container-fluid">
+      
+      <div class="row justify-content-center">
+        <div class="col-md-7">
+          <div class="row mb-5">
+            <div class="col-12 ">
+              <h2 class="site-section-heading text-center">Events</h2>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/vyakti.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Ahl ar-Ra'y</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“People of Opinion”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/vyakti.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Vyaktitvam</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“All that you need to know, is within you”</strong></p>
+                                            <p style="color: black">Participant’s personality and the ability to move an abstract idea into a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Accentus</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Why so serious?”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/segacite.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Segacite</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Because the cover of the book matters!”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/cribado.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Cribado</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Welcome to the Corporate World”</strong></p>
+                                            <p style="color: black">This event will help participants to crack the campus placement procedure.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/msmr.html">
+                                            <span class="eventa display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Ms/Mr KnowHow</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Win the occasion”</strong></p>
+                                            <p style="color: black">To identify the best of the best.</p>
+                                            <p><strong class="font-weight-bold text-primary"></strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+
+          </div>
         </div>
-		        <div class="footer py-4">
-            <div class="container-fluid text-center">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <a href="https://github.com/RajeshPandey057">
-                        <span class="icon">
-                            <i class="fa fa-github"></i>
-                        </span>
-                    </a>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                    <script>
-                        document.write(new Date().getFullYear());
-
-                    </script>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-            </div>
-        </div>
-
-
-
-
-
+      </div>
     </div>
+  </div>  
+  </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/picturefill.min.js"></script>
-    <script src="js/lightgallery-all.min.js"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#lightgallery').lightGallery();
-        });
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/aos.js"></script>
 
-    </script>
-</body>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/lightgallery-all.min.js"></script>
+  <script src="js/jquery.mousewheel.min.js"></script>
 
+  <script src="js/main.js"></script>
+  
+  <script>
+    $(document).ready(function(){
+      $('#lightgallery').lightGallery();
+    });
+  </script>
+    
+  </body>
 </html>
