--- a/events/segacite.html
+++ b/events/segacite.html
@@ -6,9 +6,7 @@
     <link rel="icon" type="image/ico" href="../images/logo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="../fonts/icomoon/style.css">
-    <link rel="stylesheet" href="../fonts/knowho/style.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/magnific-popup.css">
     <link rel="stylesheet" href="../css/jquery-ui.css">
@@ -17,21 +15,31 @@
     <link rel="stylesheet" href="../css/lightgallery.min.css">
     <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="../fonts/who/font/flaticon.css">
     <link rel="stylesheet" href="../css/swiper.css">
     <link rel="stylesheet" href="../css/aos.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <style>
+        @media screen and (max-width: 768px) {
+            #menu-toggle:checked+.nav-menu {
+                display: block;
+            }
+        }
+
+        .hero-body>.container {
+            padding: 0 10px;
+        }
+
+    </style>
 </head>
 
 <body>
-
     <div class="site-wrap">
-
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -40,25 +48,17 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-
-
-
-
-        <header class="site-navbar py-3 border-bottom" role="banner">
-
+        <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
-
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <img class="col-4" src="../images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
                         <h1 class="mb-0"><a href="../intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
-
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="../index.html">Home</a></li>
-                                <li><a href="../intro.html">Intro</a></li>
                                 <li class="has-children">
                                     <a href="../events.html">Events</a>
                                     <ul class="dropdown">
@@ -70,7 +70,8 @@
                                         <li><a href="msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="../admin/results.php">Results</a></li>
+                                <li><a href="../results.html">Results</a></li>
+                                <li><a href="../about.html">About US</a></li>
                                 <li class="has-children">
                                     <a href="../story.html">Story</a>
                                     <ul class="dropdown">
@@ -78,12 +79,10 @@
                                         <li><a href="../admin/local.php">Editor's Pick</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="../about.html">About US</a></li>
                                 <li><a href="../contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
-
                     <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -97,14 +96,10 @@
                         </div>
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
                     </div>
-
                 </div>
             </div>
-
         </header>
-
-
-
+        <!-- GRID SYSTEM -->
         <div class="site-section" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
@@ -127,55 +122,40 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="../events/accentus.html">
-                                                <span class="events display-3 text-primary mb-4 d-block"></span>
-                                                <h3 class="text-black h4">Lets get Witty!</h3>
-                                                <p style="color: black">The candidates will be asked to write down catchy headlines, tweets, captions / one-liners for the given paragraph/photograph.</p>
-                                                <p><strong class="font-weight-bold text-primary"> 1<sup>st</sup> Round</strong></p>
-                                            </a>
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Lets get Witty!</h3>
+                                            <p>The candidates will be asked to write down catchy headlines, tweets, captions / one-liners for the given paragraph/photograph.</p>
+                                            <p><strong class="font-weight-bold text-primary">1<sup>st</sup> Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="../events/accentus.html">
-                                                <span class="events display-3 text-primary mb-4 d-block"></span>
-                                                <h3 class="text-black h4">Polyglot</h3>
-                                                <p style="color: black">Let's not reveal Everything exciting here.Somethings better be come across as surprise.</p>
-                                                <p><strong class="font-weight-bold text-primary">2<sup>nd</sup> Round</strong></p>
-                                            </a>
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Polyglot</h3>
+                                            <p>Let's not reveal Everything exciting here.Somethings better be come across as surprise.</p>
+                                            <p><strong class="font-weight-bold text-primary">2<sup>nd</sup> Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="../events/accentus.html">
-                                                <span class="events display-3 text-primary mb-4 d-block"></span>
-                                                <h3 class="text-black h4">Devil’s Advocate</h3>
-                                                <p style="color: black">Personal Interview based on the given personality.</p>
-                                                <p><strong class="font-weight-bold text-primary">3<sup>rd</sup> Round</strong></p>
-                                            </a>
+                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                                            <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Devil’s Advocate</h3>
+                                            <p>Personal Interview based on the given personality.</p>
+                                            <p><strong class="font-weight-bold text-primary">3<sup>rd</sup> Round</strong></p>
                                         </div>
                                     </div>
-
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-center">
-                        <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
-                            <img class="mdl-chip__contact" src="../images/about/RC.jpeg" />
-                            <span class="mdl-chip__text">Rahul Chhichhia:9429588232</span>
-                        </span>
-                        <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
-                            <img class="mdl-chip__contact" src="../images/about/UC.jpeg" />
-                            <span class="mdl-chip__text">Upasana Chatterjee:8200738453</span>
-                        </span>
-                        <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
-                            <img class="mdl-chip__contact" src="../images/about/JP.jpeg" />
-                            <span class="mdl-chip__text">Jaynil Panwala:8866684743</span>
-                        </span></div>
                 </div>
             </div>
-
         </div>
-        <div class="footer py-4">
+
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -183,7 +163,7 @@
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -194,11 +174,7 @@
         </div>
 
 
-
-
-
     </div>
-
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/jquery-migrate-3.0.1.min.js"></script>
     <script src="../js/jquery-ui.js"></script>
