--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/ico" href="images/logo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -19,21 +18,28 @@
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        .bvm {
-            height: 120px;
-            width: auto
+        @media screen and (max-width: 768px) {
+            #menu-toggle:checked+.nav-menu {
+                display: block;
+            }
+        }
+
+        .hero-body>.container {
+            padding: 0 10px;
         }
 
     </style>
 </head>
 
 <body>
-
     <div class="site-wrap">
-
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -42,25 +48,17 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-
-
-
-
-        <header class="site-navbar py-3 border-bottom" role="banner">
-
+        <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
-
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
                         <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
-
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="index.html">Home</a></li>
-								<li><a href="intro.html">Intro</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -72,7 +70,7 @@
                                         <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="admin/results.php">Results</a></li>
+                                <li><a href="results.html">Results</a></li>
                                 <li class="has-children">
                                     <a href="story.html">Story</a>
                                     <ul class="dropdown">
@@ -85,7 +83,6 @@
                             </ul>
                         </nav>
                     </div>
-
                     <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -99,59 +96,50 @@
                         </div>
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
                     </div>
-
                 </div>
             </div>
-
         </header>
 
-        <img class="responsive-img" src="images/bvm.png" style="position: absolute;left:22px;top: 100px;height: 100px">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-md-7 justify-content-center">
-
-                    <div class="row mb-5">
-                        <div class="col-12 ">
-                            <h2 class="site-section-heading text-center"> KnowHow'19</h2>
+        <div class="site-section" data-aos="fade">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <div class="row mb-5">
+                            <div class="col-12 ">
+                                <h2 class="site-section-heading text-center"> KnowHow'19</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <img class="responsive-img" src="images/cvm.png" style="position: absolute;right:18px;top: 100px;height: 100px">
-            <div data-aos="fade">
-                <div class="container-fluid">
-                    <div class="row justify-content-center">
-                        <div class="col-md-7">
-                            <div class="row mb-5">
-                                <div class="col-12 ">
-								<h2 class="text-black h2 mb-0" style="text-align:center">“If you never try you will never know!”<br/><br/><br/></h2>
-                                    <h2 class="text-black h2 mb-0" style="text-align:center"><img class="col-9" src="images/logo.png" alt="Images" class="img-fluid" style="align-content: center" /></h2>
+                <div data-aos="fade">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-md-7">
+                                <div class="row mb-5">
+                                    <div class="col-12 ">
+                                        <h2 class="text-black h2 mb-0" style="text-align:center"><img class="col-9" src="images/logo1.png" alt="Images" class="img-fluid" style="align-content: center" /></h2>
+                                    </div>
+                                </div>
+                                <div class="row mb-5">
+                                    <div class="col-md-4 ml-auto">
+                                        <h3><b>Vision And Mission</b></h3>
+                                        <p>To train students on industry needs and provide them best opportunities available. Also, to train the students to face the “corporate world” and have a professional career.</p>
+                                    </div>
+                                    <div class="col-md-4 ml-auto">
+                                        <h3><b>Description</b></h3>
+                                        <p>“KNOW HOW ’19” is the biggest soft skill development fest organised by “TRAINING & PLACEMENT CELL” - Birla Vishwakarma Mahavidyalaya Engineering College. It consist events designed to bring the best out of the students and provide them the basic knowledge about the placement procedure. </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <div class="col-md-4 ml-auto">
-                                    <h3><b>Vision</b></h3>
-                                    <p>"To provide pivotal support & develop long lasting relationship with the companies of domestic & global knowledge economy so that such companies visit to recruit talented final year students of our college yearly, with aim to provide bright and rewarding opportunities & career to them for the valuable contributions they make in growth of company after joining the offered jobs."</p>
-                                </div>
-                                <div class="col-md-4 ml-auto">
-                                    <h3><b>Mission</b></h3>
-                                    <p>"To place competent final year students of our college in global & domestic knowledge economy companies, subsequent to acquiring required technical education by highly qualified & experienced faculties through curriculum, co-curriculum & extra curriculum activities and to train on required soft skills, best human values, attitude for continuous learning in them so that they can later on work, manange & leads their organization in efficient & effective manner in global economy." </p>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row mb-5 justify-content-center">
-                <div class="col-md-5 justify-content-center">
-                    <h3><b>Description</b></h3>
-                    <p>“Know How ’19” is the biggest soft skill development fest organised by “TRAINING & PLACEMENT CELL” - Birla Vishwakarma Mahavidyalaya Engineering College. It consist events designed to bring the best out of the students and provide them the basic knowledge about the placement procedure. </p>
-                </div>
-
             </div>
         </div>
-		        <div class="footer py-4">
+
+
+
+ <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -159,7 +147,7 @@
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -169,7 +157,6 @@
             </div>
         </div>
     </div>
-
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
